// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a relative change 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <svg
    color="#40B66B"
    data-file-name="SvgArrowChange"
    height={16}
    strokeWidth={2}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "180deg",
          },
        ],
      }
    }
    width={16}
  />
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 2,
          "width": 2,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#5D6785",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 15,
          "lineHeight": 20,
        },
      ]
    }
  >
    12.00%
  </Text>
</View>
`;

exports[`renders placeholders with absolute change 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <svg
    color="#40B66B"
    data-file-name="SvgArrowChange"
    height={16}
    strokeWidth={2}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "180deg",
          },
        ],
      }
    }
    width={16}
  />
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 2,
          "width": 2,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#5D6785",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 15,
          "lineHeight": 20,
        },
      ]
    }
  >
    $100.00 (12.00%)
  </Text>
</View>
`;

exports[`renders placeholders without a change 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#5D6785",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 15,
          "lineHeight": 20,
        },
      ]
    }
  >
    -
  </Text>
</View>
`;
